<resources>
    <string name="app_name">MQTT</string>
    <string name="port">Port</string>
    <string name="url">URl</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="subscriptiontopic">subscriptionTopic</string>
    <string name="publishtopic">publishTopic</string>
    <string name="topic_doesn_t_connect">Topic doesn\'t connect</string>
    <string name="topic_connected">Topic connected</string>
    <string name="topic_read">Topic Read</string>
    <string name="connect_topic_read">Connect Topic Read</string>
    <string name="topic">Topic</string>
    <string name="view_all_history">View All History</string>
    <string name="den">Đèn</string>
</resources>
