<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_drawer">

    <TextView
        android:id="@+id/txtTitleTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/topic_read"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTopicRead"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="150dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/topic"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleTopic" />

    <TextView
        android:id="@+id/btnTopicRead"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="150dp"
        android:background="#11000000"
        android:gravity="center"
        android:text="@string/connect_topic_read"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTopicRead" />

</android.support.constraint.ConstraintLayout>