<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <EditText
        android:id="@+id/edtURL"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/edtPort"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:hint="@string/url"
        android:inputType="textPersonName"
        android:text="m16.cloudmqtt.com"
        android:textSize="16sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edtPort"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/edtUser"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/port"
        android:inputType="textPersonName"
        android:text="13482"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/edtPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:text="hoan"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/edtUser"
        android:layout_alignLeft="@+id/edtUser"
        android:layout_alignBottom="@+id/cardView"
        android:layout_marginBottom="150dp"
        android:background="#11000000"
        android:ems="10"
        android:text="12345678"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="RtlHardcoded" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
